# miri-tool-v3

./: .gitignore  CHANGES_LEGACY_BLE_HTTP.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  packet.c  packet.h  tmp.c  tmp.h
main/app/: app_main.c
main/base/ble/: ble_gatt_server.c  ble_gatt_server.h  ble_init.c  ble_init.h
main/base/can/: can_init.c  can_init.h  incan.c  incan.h
main/base/console/: cli_commands.c  cli_commands.h  cli_core.c  cli_core.h  cli_hht_view.c  cli_hht_view.h  cli_menu.c  cli_menu.h  cli_ota_view.c  cli_ota_view.h  cli_router.c  cli_router.h  cli_task.c  cli_task.h  console_init.c  console_init.h
main/base/http/: http_init.c  http_init.h
main/base/net/: net_init.c  net_init.h
main/base/net/http/: http_server.c  http_server.h
main/base/net/http/sub/: rest_common_delete.c  rest_common_delete.h  rest_common_format.c  rest_common_format.h  rest_fat_get_list.c  rest_fat_get_list.h  rest_fs_browser.c  rest_fs_browser.h  rest_fw_state.c  rest_fw_state.h  rest_get_fdc.c  rest_get_fdc.h  rest_sdmmc_fw_get_list.c  rest_sdmmc_fw_get_list.h  rest_sdmmc_fw_meta.c  rest_sdmmc_fw_meta.h  rest_sdmmc_fw_run.c  rest_sdmmc_fw_run.h  rest_sdmmc_fw_upload_raw.c  rest_sdmmc_fw_upload_raw.h  rest_sdmmc_fw_upload_run_mobile.c  rest_sdmmc_fw_upload_run_mobile.h
main/base/net/tcp/: tcp_server.c  tcp_server.h
main/base/runtime_config/: runtime_config.c  runtime_config.h
main/base/sdmmc/: sdmmc_init.c  sdmmc_init.h
main/base/spiflash_fs/: spiflash_fs.c  spiflash_fs.h
main/base/system/: event_init.c  event_init.h  log_init.c  log_init.h  nvs_init.c  nvs_init.h  system_init.c  system_init.h
main/base/wifi/: wifi_init.c  wifi_init.h
main/board/: board_profile.c  board_profile.h
main/config/: pinmap.c  pinmap.h  storage_paths.h  version.c  version.h
main/core/: role_dispatcher.c  role_dispatcher.h
main/core/diagnosis/: diagnosis_main.c  diagnosis_main.h
main/core/esp32_update/: esp32_update.c  esp32_update.h
main/core/firmware_upload/: can_fw_update.c  can_fw_update.h  fw_ble_legacy_context.c  fw_ble_legacy_context.h  fw_update_worker.c  fw_update_worker.h  fw_upload.c  fw_upload.h  fw_upload_crypto.c  fw_upload_crypto.h  fw_upload_manager.c  fw_upload_manager.h  fw_upload_meta_defaults.c  fw_upload_meta_defaults.h  fw_upload_packaging.c  fw_upload_packaging.h  fw_upload_registry.c  fw_upload_registry.h  fw_upload_state.c  fw_upload_state.h  fw_upload_storage.c  fw_upload_storage.h  fw_upload_types.c  fw_upload_types.h  probe_link_update.c  probe_link_update.h
main/core/firmware_upload/probe_link/: probe_link_protocol.c  probe_link_protocol.h  probe_link_session.c  probe_link_session.h  probe_link_transport.c  probe_link_transport.h
main/core/firmware_upload/uart_isp/: uart_isp_lowlevel.c  uart_isp_lowlevel.h  uart_isp_update.c  uart_isp_update.h
main/core/firmware_upload/uart_isp/nxp_isp/: defines.h  isp.c  isp_uart.c  isp_uart.h  lpc_isp.c  lpc_isp.h  lpcisp.h  nxp_partdesc.c  nxp_partdesc.h  report.c  report.h  uuencode.c  uuencode.h
main/core/hht/: hht_3000.c  hht_3000.h  hht_display.c  hht_display.h  hht_keys.c  hht_keys.h  hht_main.c  hht_main.h  hht_session.c  hht_session.h  hht_task.c  hht_task.h  hht_uart.c  hht_uart.h  hht_wb100.c  hht_wb100.h
main/core/manual/: manual_control.c  manual_control.h
main/core/stm32_update/: stm32_update.c  stm32_update.h
main/core/storage_upload/: storage_upload.c  storage_upload.h
main/drivers/: gpio_driver.c  gpio_driver.h
main/protocol/: ble_cmd_parser.c  ble_cmd_parser.h  ble_protocol.c  ble_protocol.h
main/tasks/: task_manager.c  task_manager.h
main/utils/: ihex.h  ihex2bin.c  ihex2bin.h  ihex_read.c  ihex_read.h  kk_srec.c  kk_srec.h  srec2bin.c  srec2bin.h  utils.c  utils.h
