idf_component_register(
    SRCS
        "app/app_main.c"
        "base/system/system_init.c"
        "base/system/log_init.c"
        "base/system/nvs_init.c"
        "base/system/event_init.c"
        "base/console/cli_router.c"
        "base/console/cli_core.c"
        "base/console/cli_commands.c"
        "base/console/cli_menu.c"
        "base/console/console_init.c"
        "base/can/can_init.c"
        "base/can/incan.c"
        "base/console/cli_task.c"
        "base/console/cli_hht_view.c"
        "base/console/cli_ota_view.c"
        "base/runtime_config/runtime_config.c"
        "base/net/net_init.c"
        "base/net/http/http_server.c"
        "base/net/http/sub/rest_sdmmc_fw_upload_run_mobile.c"
        "base/net/http/sub/rest_sdmmc_fw_upload_raw.c"
        "base/net/http/sub/rest_sdmmc_fw_meta.c"
        "base/net/http/sub/rest_fs_browser.c"
        "base/net/http/sub/rest_sdmmc_fw_run.c"
        "base/net/http/sub/rest_fw_state.c"
        "base/net/http/sub/rest_sdmmc_fw_get_list.c"
        "base/net/http/sub/rest_fat_get_list.c"
        "base/net/http/sub/rest_common_format.c"
        "base/net/http/sub/rest_common_delete.c"
        "base/net/http/sub/rest_get_fdc.c"
        "base/net/tcp/tcp_server.c"
        "base/http/http_init.c"
        "base/ble/ble_init.c"
        "base/ble/ble_gatt_server.c"
        "base/wifi/wifi_init.c"
        "base/sdmmc/sdmmc_init.c"
        "base/spiflash_fs/spiflash_fs.c"
        "core/hht/hht_main.c"
        "core/hht/hht_session.c"
        "core/hht/hht_wb100.c"
        "core/hht/hht_3000.c"
        "core/hht/hht_uart.c"
        "core/hht/hht_display.c"
        "core/hht/hht_keys.c"
        "core/hht/hht_task.c"
        "core/firmware_upload/fw_upload.c"
        "core/firmware_upload/fw_ble_legacy_context.c"
        "core/firmware_upload/fw_upload_manager.c"
        "core/firmware_upload/fw_upload_meta_defaults.c"
        "core/firmware_upload/fw_upload_types.c"
        "core/firmware_upload/fw_upload_registry.c"
        "core/firmware_upload/fw_upload_state.c"
        "core/firmware_upload/fw_upload_crypto.c"
        "core/firmware_upload/fw_upload_storage.c"
        "core/firmware_upload/fw_upload_packaging.c"
        "core/firmware_upload/fw_update_worker.c"
        "core/firmware_upload/can_fw_update.c"
        "core/firmware_upload/probe_link/probe_link_transport.c"
        "core/firmware_upload/probe_link/probe_link_protocol.c"
        "core/firmware_upload/probe_link/probe_link_session.c"
        "core/firmware_upload/probe_link_update.c"
        "core/firmware_upload/uart_isp/uart_isp_lowlevel.c"
        "core/firmware_upload/uart_isp/uart_isp_update.c"
        "core/firmware_upload/uart_isp/nxp_isp/isp.c"
        "core/firmware_upload/uart_isp/nxp_isp/isp_uart.c"
        "core/firmware_upload/uart_isp/nxp_isp/nxp_partdesc.c"
        "core/firmware_upload/uart_isp/nxp_isp/report.c"
        "core/firmware_upload/uart_isp/nxp_isp/uuencode.c"
        "core/storage_upload/storage_upload.c"
        "core/esp32_update/esp32_update.c"
        "core/stm32_update/stm32_update.c"
        "core/diagnosis/diagnosis_main.c"
        "core/manual/manual_control.c"
        "core/role_dispatcher.c"
        "drivers/gpio_driver.c"
        "protocol/ble_protocol.c"
        "protocol/ble_cmd_parser.c"
        "tasks/task_manager.c"
        "config/pinmap.c"
        "tmp.c"
        "config/version.c"
        "board/board_profile.c"
        "utils/utils.c"
        "utils/ihex2bin.c"
        "utils/ihex_read.c"
        "utils/kk_srec.c"
        "utils/srec2bin.c"
        "packet.c"
    INCLUDE_DIRS "." "core/firmware_upload/uart_isp" "core/firmware_upload/uart_isp/nxp_isp"
    REQUIRES esp_netif esp_event nvs_flash driver vfs fatfs esp_wifi esp_http_server json mbedtls bt app_update
)

